Change USERNAME secret to use vars

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
           echo "Your username is $USERNAME"
           echo "Your password is $PASSWORD"
         env:
-          USERNAME: ${{ secrets.USERNAME }}
+          USERNAME: ${{ vars.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
 
       
