Add environment setting to GitHub Actions workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   run-on-ubuntu:
     runs-on: ubuntu-latest
-
+    environment: dev
     steps:
       - name: Testing secrets
         env:
