Use secrets for username and password in workflow
Updated the workflow to use secrets for username and password.

--- a/.github/workflows/pratice.yml
+++ b/.github/workflows/pratice.yml
@@ -15,6 +15,9 @@ jobs:
         env:
           USERNAME: ${{ vars.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
+            
+      
         run: |
-          echo "Your username is $USERNAME"
-          echo "Your password is $PASSWORD"
+         - uses: actions/check-out@v4
+          python --version
+          python construct.py
